infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: travelbee-prod
  labels:
    name: travelbee-prod
    security: high
