infrastructure/kubernetes/openshift-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: travelbee-route
  namespace: travelbee-prod
  labels:
    app: travelbee-web
spec:
  to:
    kind: Service
    name: travelbee-web-svc
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
